--- a/app/views/pairwise_comparisons/_categorical_add.html.erb
+++ b/app/views/pairwise_comparisons/_categorical_add.html.erb
@@ -6,10 +6,15 @@
   <label for = "feature-name" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Feature Name </label>
   <input id = "feature-name" type="text" name="featurename" value="" placeholder="Feature Name">
   <p id = "error_1_1" style = "color:red;margin-top:-1%;display:none"> Feature name cannot be blank <p>
- <br> <br>
 
+ <% if current_user.role == 'admin' %>
+  <br> <br>
  <label for = "cat_category" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Category/Type </label>
  <input id = "cat_category" type="text" name="featurename" value="" placeholder="Category Name">
+ <% else %>
+ <label for = "cat_category" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;display:none"> Category/Type </label>
+ <input id = "cat_category" type="text" name="featurename" value="" placeholder="Category Name" style = "display:none">
+ <% end %>
 </form>
 
 
