--- a/app/views/pairwise_comparisons/new.html.erb
+++ b/app/views/pairwise_comparisons/new.html.erb
@@ -9,7 +9,7 @@
    <div id = "modal_cont">
    <h4 style = "color:#3d6ab1;font-weight:bold"> Add Your Own Feature</h4>
    <br>
-   <hr style ='overflow:visible;width:105.9%;margin-left:-3%;color:white;border-width: 1px;'>
+   <hr style ='margin-left: 24px; margin-right: 24px;'>
    <br>
    <p style = "font-weight:bold;font-size:1.25em;" > Categorical features are qualitative.</p>  <p style = "font-size:1.25em;">Examples
     include gender, race, and neighborhood. </p>
