changed survey form to NEXT

--- a/app/views/pairwise_comparisons/_done.html.erb
+++ b/app/views/pairwise_comparisons/_done.html.erb
@@ -14,7 +14,7 @@
 <p style = "margin-left:10%;color:black;width:90%;font-size:1.5em;line-height:17pt;font-weight:normal;" > Between two drivers, choose the driver who you think deserves the request  </p>
 <br> <br>
 
-<a href = "evaluations/" class="waves-effect waves-dark btn" id = "start_btn_2" style = "float:right;width:18.5%;padding-top:0.7%;padding-bottom:4%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;font-size:1.2em;"> Take Exit Survey </a>
+<a href = "evaluations/" class="waves-effect waves-dark btn" id = "start_btn_2" style = "float:right;width:18.5%;padding-top:0.7%;padding-bottom:4%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;font-size:1.2em;"> NEXT </a>
 <br><br><br><br><br><br><br><br><br><br>
 
 </div>
