changed placeholder content to desired content

--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -2,10 +2,12 @@
 <h1 style = "margin-left:10%;color:#3d6ab1" >Evaluation</h1>
 <hr id = "hhr">
 <p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:22pt;font-weight:normal;" >
-  Based on your chosen features and decisions from the previous scenarios, we will train our test algorithm to
-  make matching decisions that you believe to be ideal. As we’ve previously mentioned, we’ve noticed that
-  many frustrations arise from a lack of transparency from the algorithm. We’d like to ask you how you want
-  the AI to work with you.</p>
+  Thank you for your input in the previous scenario exercises. We will
+  be training our test algorithm to make matching decisions based on
+  the features you believe the algorithm should consider and your decisions
+  from the scenario comparisons. We would now like to ask how you want the
+  algorithm to work with you when you are behind the wheel.
+</p>
 <br> <br>
 <form action="#" id = "about_form" style = "display:block;margin-left:10%;width:80%;">
   <h5  style = "font-weight:bold"> The Algorithm </h5> <br/>
