--- a/app/views/pairwise_comparisons/_about.html.erb
+++ b/app/views/pairwise_comparisons/_about.html.erb
@@ -1,12 +1,14 @@
 <div class = "contain_1" style = "display:block">
 <h1 style = "margin-left:10%;color:#3d6ab1" >About</h1>
 <hr id = "hhr">
-<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:22pt;font-weight:normal;" > Thank you for participating in this research opportunity! We’d like to know more about your experiences
-working for your company. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-deserunt mollit anim id est laborum</p>
+<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:22pt;font-weight:normal;" > 
+Thank you for participating in this research opportunity! We greatly appreciate you taking time out
+ of your schedule to help us better understand your perspective behind the wheel. Before we move on 
+ to the questions regarding your experiences with your company’s algorithm, we would like to know more 
+ you and your time working for your company(s). Please answer each question below thoroughly and truthfully.
+ For more open-ended questions, please do not reveal any private or personally identifiable information about 
+ yourself or others in your answers.
+</p>
 <br> <br>
 <form action="#" id = "about_form" style = "display:block;margin-left:10%;width:80%;">
   <h5  style = "font-weight:bold"> Work Experience</h5> <br/>
