--- a/app/views/pairwise_comparisons/_page_2.html.erb
+++ b/app/views/pairwise_comparisons/_page_2.html.erb
@@ -3,17 +3,25 @@
 <hr style = "margin-left:-15%;color: white;border-width: 1px;overflow:visible;width: 130%;"/>
 <br>
 
-<p style = "margin-left:10%;color:black;width:75%;font-size:1.5em;line-height:22pt;font-weight:normal;" >Below are the factors you chose previously that are applicable in finding out about your preferences on requests.
-Based on the factors you believe the algorithm should consider when matching drivers to requests, we are now going
-to give you some sets of scenarios. Each set will have two options, and it is up to your discretion to choose which is
-the better option. Please assume that these scenarios take place in a small, set location (not a large area like New
-York City.) Your answers will be used to help train a new matching algorithm we are developing for test cases. </p>
+<p style = "margin-left:10%;color:black;width:75%;font-size:1.5em;line-height:22pt;font-weight:normal;">
+  In the previous exercise, you chose features that you believe your company’s in-app algorithm
+  should consider when matching drivers to customers. We are now going to give you some sets of
+  hypothetical scenarios based on your chosen features. Each set will have two options, and it is
+  up to your discretion to choose which is the better option. Please assume that these scenarios
+  take place in a small, set location (not a large area like New York City.) Your decisions for each
+  set will be used to help train a new matching algorithm that we are developing for test cases.
+</p>
 <br> <br> <br>
 
 
 <p style = "margin-left:10%;font-size:2.4em;font-weight:bold;color:#3d6ab1">Part 2. Social Ranking </p>
-<p style = "margin-left:10%;color:black;width:90%;font-size:1.5em;line-height:17pt;font-weight:normal;" > Between two drivers, choose the driver who you think deserves the request by comparing different factors.  </p>
-<p style = "margin-left:10%;color:black;width:90%;font-size:1.5em;line-height:17pt;font-weight:normal;" >Below are the factors you previously chose that are applicable in finding out about your standards on drivers.  </p>
+<p style = "margin-left:10%;color:black;width:90%;font-size:1.5em;line-height:17pt;font-weight:normal;">
+  For the following scenario sets, please assume the role of the algorithm. You will be given two
+  drivers competing for the same customer ping. Based on the information you believe the algorithm
+  should consider when assigning drivers to requests, please choose which driver you would prefer the
+  algorithm to match with the request ping. The information below are features you previously chose that
+  are applicable to these sets of scenarios.
+</p>
 
 <br> <br>
 
